unpackaged/main/default/objects/Liability__c/Liability__c.object-meta.xml
<CustomObject>
    <label>Liability</label>
    <nameField>
        <displayFormat>LIA-{0000}</displayFormat>
        <label>Liability Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Liabilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>