unpackaged/main/default/objects/Liability__c/fields/Account_Closed__c.field-meta.xml
<CustomField>
    <fullName>Account_Closed__c</fullName>
    <label>Account Closed</label>
    <type>Date</type>
</CustomField>