unpackaged/main/default/objects/Liability__c/fields/Account_Opened__c.field-meta.xml
<CustomField>
    <fullName>Account_Opened__c</fullName>
    <label>Opened</label>
    <type>Date</type>
</CustomField>