unpackaged/main/default/objects/Liability__c/fields/Account_Term__c.field-meta.xml
<CustomField>
    <fullName>Account_Term__c</fullName>
    <label>Term</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>