unpackaged/main/default/objects/Liability__c/fields/ApplicationBankAccount__c.field-meta.xml
<CustomField>
    <fullName>ApplicationBankAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Bank Account</label>
    <referenceTo>ApplicationBankAccount__c</referenceTo>
    <relationshipLabel>Liabilities</relationshipLabel>
    <relationshipName>Liabilities</relationshipName>
    <type>Lookup</type>
</CustomField>