unpackaged/main/default/objects/Liability__c/fields/AssessedBalance__c.field-meta.xml
<CustomField>
    <fullName>AssessedBalance__c</fullName>
    <label>Assessed (Balance)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>