unpackaged/main/default/objects/Liability__c/fields/AssessedRepayment__c.field-meta.xml
<CustomField>
    <fullName>AssessedRepayment__c</fullName>
    <label>Assessed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>