unpackaged/main/default/objects/Liability__c/fields/BasiqBalance__c.field-meta.xml
<CustomField>
    <fullName>BasiqBalance__c</fullName>
    <label>Basiq (Balance)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>