unpackaged/main/default/objects/Liability__c/fields/BasiqRepayment__c.field-meta.xml
<CustomField>
    <fullName>BasiqRepayment__c</fullName>
    <label>Basiq (Repayment)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>