unpackaged/main/default/objects/Liability__c/fields/BSB__c.field-meta.xml
<CustomField>
    <fullName>BSB__c</fullName>
    <label>BSB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>