unpackaged/main/default/objects/Liability__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mortgage</fullName>
            </value>
            <value>
                <fullName>Personal loan</fullName>
            </value>
            <value>
                <fullName>Vehicle loan</fullName>
                <label>Vehicle loan (e.g. car or boat)</label>
            </value>
            <value>
                <fullName>Lease</fullName>
            </value>
            <value>
                <fullName>Credit card</fullName>
            </value>
            <value>
                <fullName>Lines of credit</fullName>
            </value>
            <value>
                <fullName>Store card</fullName>
            </value>
            <value>
                <fullName>Overdraft</fullName>
            </value>
            <value>
                <fullName>Margin loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>