unpackaged/main/default/objects/Liability__c/fields/CreditorName__c.field-meta.xml
<CustomField>
    <fullName>CreditorName__c</fullName>
    <label>Creditor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>