unpackaged/main/default/objects/Liability__c/fields/PaidInFull__c.field-meta.xml
<CustomField>
    <fullName>PaidInFull__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paid in Full</label>
    <type>Checkbox</type>
</CustomField>