unpackaged/main/default/objects/Liability__c/fields/RepaymentFrequency__c.field-meta.xml
<CustomField>
    <fullName>RepaymentFrequency__c</fullName>
    <label>Repayment Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>