unpackaged/main/default/objects/Liability__c/fields/RepaymentHistory__c.field-meta.xml
<CustomField>
    <fullName>RepaymentHistory__c</fullName>
    <label>Repayment History</label>
    <length>255</length>
    <type>Text</type>
</CustomField>