unpackaged/main/default/objects/Liability__c/fields/RepaymentType__c.field-meta.xml
<CustomField>
    <fullName>RepaymentType__c</fullName>
    <label>Repayment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Principal and Interest</fullName>
            </value>
            <value>
                <fullName>Interest Only</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>