unpackaged/main/default/objects/Liability__c/fields/TimeLeftOnLoan__c.field-meta.xml
<CustomField>
    <fullName>TimeLeftOnLoan__c</fullName>
    <label>Time Left on Loan in Months</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>