unpackaged/main/default/objects/Liability__c/fields/Toberefinanced__c.field-meta.xml
<CustomField>
    <fullName>Toberefinanced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refinance</label>
    <type>Checkbox</type>
</CustomField>