unpackaged/main/default/objects/Liability__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Applicant__c</columns>
    <columns>Application__c</columns>
    <columns>ExternalId__c</columns>
    <columns>Balance__c</columns>
    <columns>Toberefinanced__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>